--- a/src/Components/Carousel/_Carousel.scss
+++ b/src/Components/Carousel/_Carousel.scss
@@ -76,15 +76,15 @@
         @media (max-width: #{$screen-lg}) {
             height: 45vh;
         }
-        @media (max-width: #{$screen-md}) {
-            height: 35vh;
-        }
-        @media (max-width: #{$screen-sm}) {
-            height: 25vh;
-        }
-        @media (max-width: #{$screen-xs}) {
-            height: 20vh;
-        }
+        // @media (max-width: #{$screen-md}) {
+        //     height: 35vh;
+        // }
+        // @media (max-width: #{$screen-sm}) {
+        //     height: 25vh;
+        // }
+        // @media (max-width: #{$screen-xs}) {
+        //     height: 20vh;
+        // }
     }
 
     // Centering the content in Slider
